--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>JavaScript Study</title>
 </head>
 <body>
-    <script src="./prototype-inheritance.js"></script>
+    <img src="" data-js="dog-img" alt="A random dog image">
+    <script src="./promises2.js"></script>
 </body>
 </html>
