Async-Await study

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <img src="" data-js="dog-img" alt="A random dog image">
-    <script src="./promises2.js"></script>
+    <script src="./async-await.js"></script>
 </body>
 </html>
