--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <img src="" data-js="dog-img" alt="A random dog image">
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./async-await.js"></script>
 </body>
 </html>
